--- a/style/header.css
+++ b/style/header.css
@@ -1,1 +1,8 @@
-
+.cabecalho_menu-hambuger {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("./img/menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
