--- a/style/header.css
+++ b/style/header.css
@@ -33,3 +33,9 @@ lista-menu{
 .container_botao:checked~,lista-menu{
     display: block;
 }
+
+.lista-menu-titulo,
+.lista-menu-item {
+    padding: 1em;
+    background-color: var(--branco);
+}
