--- a/style/header.css
+++ b/style/header.css
@@ -39,3 +39,15 @@ lista-menu{
     padding: 1em;
     background-color: var(--branco);
 }
+
+.lista-menu-titulo {
+    color: var(--laranja);
+}
+
+.lista-menu-link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
