--- a/style/header.css
+++ b/style/header.css
@@ -42,6 +42,7 @@ lista-menu{
 
 .lista-menu-titulo {
     color: var(--laranja);
+    font-weight: 700;
 }
 
 .lista-menu-link {
@@ -50,4 +51,10 @@ lista-menu{
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+
+
+.container-botao{
+    display: none;
+}
+
 }
