--- a/carrossel.css
+++ b/carrossel.css
@@ -1,1 +1,13 @@
+.carrossel-titulo{
+    color:var(--branco)
+    text-align:center;
+    text-transform:uppercase;
+    background-color:var(--branco);
+    font-size:18px;
+    font-weight:700;
+    padding:1em 0 0.5em 0;
+}
 
+.swiper-slide img{
+    width: 100%;
+}
