--- a/carrossel.css
+++ b/carrossel.css
@@ -11,3 +11,15 @@
 .swiper-slide img{
     width: 100%;
 }
+
+
+.swiper-button-prev,
+.swiper-button-next{
+    display: none;
+}
+
+.swiper-pagination{
+    position: initial;
+    margin: 5em 0;
+}
+
