--- a/carrossel.css
+++ b/carrossel.css
@@ -23,3 +23,15 @@
     margin: 5em 0;
 }
 
+.card{
+    background: var(--branco);
+    bow-shadow: 0px 4px 4px rgbá (0,0,0,0,0.25)
+    border-radius: 10px;
+    margin: 1cm;
+    padding: 1cm;
+}
+.card-descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
