--- a/carrossel.css
+++ b/carrossel.css
@@ -63,3 +63,24 @@ margin: 0.5em 0;
 .descricao-texto {
     font-size: 14px;
 }
+
+
+.botoes__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco)
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.botoes-item {
+    margin: 0 0.5em;
+}
+
+hr {
+    margin: 0;
+}
+
+.rodape {
+    background-color: var(--branco);
+    padding: 1em;}
