--- a/style/header.css
+++ b/style/header.css
@@ -28,6 +28,7 @@ lista-menu{
     display: none;
     position:absolute;
     top: 100%;
+    width: 60vw;
 }
 
 .container_botao:checked~,lista-menu{
